--- a/NeuRIS/confs/neuris.conf
+++ b/NeuRIS/confs/neuris.conf
@@ -201,8 +201,9 @@ model {
 
     neus_renderer {
         # for neus rendering
-        n_samples = 64
-        n_importance = 64
+        #n_samples = 64
+        n_samples = 32
+        n_importance = 32
         n_outside = 0
         # up_sample_steps = 4
         perturb = 1.0
