--- a/NeuRIS/confs/neuris.conf
+++ b/NeuRIS/confs/neuris.conf
@@ -66,7 +66,8 @@ dataset {
 # }
 
 train {
-    batch_size = 1024
+    #batch_size = 1024
+    batch_size = 512
 
     learning_rate = 2e-4
     learning_rate_milestone = [ 10000, 15000, 20000 ]
