--- a/NeuRIS/confs/neuris.conf
+++ b/NeuRIS/confs/neuris.conf
@@ -143,7 +143,8 @@ model {
     # }
 
     sdf_network {
-        bias = 0.6
+        #bias = 0.6
+        bias = 0.0
         d_in = 3
 
         #network
@@ -222,9 +223,12 @@ model {
     loss {
         # Loss
         color_weight = 1.0
-        igr_weight = 0.1
-        mask_weight = 0.0
-        smooth_weight = 0.0
+        #igr_weight = 0.1
+        igr_weight = 10.0
+        #mask_weight = 0.0
+        mask_weight = 0.1
+        #smooth_weight = 0.0
+        smooth_weight = 0.001
 
         # depth and normal priors
         depth_weight = 0.0
