--- a/NeuRIS/confs/neuris.conf
+++ b/NeuRIS/confs/neuris.conf
@@ -32,7 +32,7 @@ dataset {
     sphere_radius = 1.0
     resolution_level = 1.0
 
-    estimate_scale_mat = False
+    estimate_scale_mat = True
     cache_all_data = False
     mask_out_image = False
 }
